<resources>
    <string name="app_name">HumanBenchMark</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reaction_time">Reaction Time</string>
    <string name="edit_profile">Edit profile</string>
    <string name="verbal_memory">Verbal Memory</string>
    <string name="number_memory">Number Memory</string>
    <string name="react_time_test">React Time Test</string>
    <string name="rt_start_title">When the red box turns green,click as quickly as you can. Click anywhere to start.</string>
    <string name="rt_waiting">Wait for green</string>
    <string name="too_short">Too Soon!</string>
    <string name="rt_again">Click to try again.</string>
    <string name="aim_trainer">Aim Trainer</string>
    <string name="at_start_title">Hit 30 targets as quickly as you can.</string>
    <string name="at_start_title_second">Click the target above to begin.</string>
    <string name="aim_pic">Aim picture</string>
    <string name="AtRemain">Remaining</string>
    <string name="article">The third little pig worked hard all day and built his house with bricks. It was a sturdy house complete with a finereplace andked like it could withstand the strongest winds. The next day, a wolf happened to pass bythe lane where the three little pigs lived; and he saw the straw house, and he smelled the pig insidepig would make a mighty fine meal and his mouth began to water.</string>
    <string name="tt_head">Typing Test</string>
    <string name="tt_start">Start typing to begin.</string>
    <string name="tt_title">How many characters per minute can you type?</string>
    <string name="nm_head">Number Memory</string>
    <string name="nm_title">The average person can remember 7 numbers at once.Can you do more?</string>
    <string name="nm_start">start</string>
    <string name="nm_enter">Enter</string>
    <string name="nm_retry">Again</string>
    <string name="app_copyright">Designed by Dreamerryao and KingDomAAA from ZJU.</string>
    <string name="app_name_cn">测试你的反应能力</string>

</resources>