<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#20FFCCCC"
tools:context=".InitActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="180dp">

    <ImageView
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/default_avator"
        android:contentDescription="TODO" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/app_name_cn"
        android:textColor="@color/dark_orange"
        android:textSize="17sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/dark_orange"
        android:textSize="35sp"
        android:textStyle="bold" />




    <!--<TextView-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:layout_marginTop="5dp"-->
    <!--android:text="@string/app_discribe"-->
    <!--android:textColor="#d95959"-->
    <!--android:textSize="17sp" />-->

</LinearLayout>

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/app_copyright"
    android:textColor="@color/light_coral"
    android:textSize="13sp"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="20dp"
    />

</RelativeLayout>